force-app/main/default/objects/InstallationRequest__c/InstallationRequest__c.object-meta.xml
<CustomObject>
    <description>Class to store and follow the installation request of our products. This is a service certain showrooms offer through a list of authorised installers.</description>
    <label>Installation Request</label>
    <nameField>
        <label>Installation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Installation Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>