force-app/main/default/objects/InstallationRequest__c/fields/AcceptedBy__c.field-meta.xml
<CustomField>
    <fullName>AcceptedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User accepting the installation (generally the installer himself)</description>
    <label>Accepted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Installation_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>