force-app/main/default/objects/InstallationRequest__c/fields/AcceptedDate__c.field-meta.xml
<CustomField>
    <fullName>AcceptedDate__c</fullName>
    <label>Accepted Date</label>
    <type>Date</type>
</CustomField>