force-app/main/default/objects/InstallationRequest__c/fields/bathrooms__c.field-meta.xml
<CustomField>
    <fullName>bathrooms__c</fullName>
    <description>Number of bathrooms included in the installation</description>
    <label>#Bathrooms</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>