force-app/main/default/objects/InstallationRequest__c/fields/Installation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Installation_Cost__c</fullName>
    <label>Installation Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>