force-app/main/default/objects/InstallationRequest__c/fields/Installer_Contact__c.field-meta.xml
<CustomField>
    <fullName>Installer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Installation Requests</relationshipLabel>
    <relationshipName>Installation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>