force-app/main/default/objects/InstallationRequest__c/fields/InstallerAccount__c.field-meta.xml
<CustomField>
    <fullName>InstallerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Installer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Installation Requests</relationshipLabel>
    <relationshipName>Installation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>