force-app/main/default/objects/InstallationRequest__c/fields/kitchens__c.field-meta.xml
<CustomField>
    <fullName>kitchens__c</fullName>
    <label>#Kitchens</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>