force-app/main/default/objects/InstallationRequest__c/fields/LastTransition__c.field-meta.xml
<CustomField>
    <fullName>LastTransition__c</fullName>
    <description>Records the date of the last state transition</description>
    <label>Last State Transition</label>
    <type>Date</type>
</CustomField>