force-app/main/default/objects/InstallationRequest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Opportunity this installation is for</description>
    <inlineHelpText>Please enter the opportunity this installation is for</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Installation Requests</relationshipLabel>
    <relationshipName>Installation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>