force-app/main/default/objects/InstallationRequest__c/fields/others__c.field-meta.xml
<CustomField>
    <fullName>others__c</fullName>
    <label>#Others</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>