force-app/main/default/objects/InstallationRequest__c/fields/ReasonLost__c.field-meta.xml
<CustomField>
    <fullName>ReasonLost__c</fullName>
    <inlineHelpText>Please enter the reason why this installation project has been lost</inlineHelpText>
    <label>Reason Lost</label>
    <type>TextArea</type>
</CustomField>