force-app/main/default/objects/InstallationRequest__c/fields/ReasonRejected__c.field-meta.xml
<CustomField>
    <fullName>ReasonRejected__c</fullName>
    <inlineHelpText>Please enter the reason for the rejection of this installation project.</inlineHelpText>
    <label>Reason Rejected</label>
    <type>TextArea</type>
</CustomField>