force-app/main/default/objects/InstallationRequest__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the sales organization that will invoice this installation</inlineHelpText>
    <label>Sales Organization</label>
    <referenceTo>Sales_Org__c</referenceTo>
    <relationshipLabel>Installation Requests</relationshipLabel>
    <relationshipName>Installation_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>