force-app/main/default/objects/InstallationRequest__c/fields/SAPOrder__c.field-meta.xml
<CustomField>
    <fullName>SAPOrder__c</fullName>
    <inlineHelpText>Please enter the order number where this installation has been included</inlineHelpText>
    <label>SAP Sales Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>