force-app/main/default/objects/InstallationRequest__c/fields/SAPPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>SAPPurchaseOrder__c</fullName>
    <inlineHelpText>Please enter the purchase order number for this installation</inlineHelpText>
    <label>SAP Purchase Order</label>
    <length>18</length>
    <type>Text</type>
</CustomField>