force-app/main/default/objects/InstallationRequest__c/fields/SAPQuote__c.field-meta.xml
<CustomField>
    <fullName>SAPQuote__c</fullName>
    <inlineHelpText>Please enter the number of the quotation given to the customer</inlineHelpText>
    <label>SAP Quote</label>
    <length>18</length>
    <type>Text</type>
</CustomField>