force-app/main/default/objects/InstallationRequest__c/fields/SurveyCompleted__c.field-meta.xml
<CustomField>
    <fullName>SurveyCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box when the site surveyto the customer has been done</inlineHelpText>
    <label>Site Survey Completed</label>
    <type>Checkbox</type>
</CustomField>