force-app/main/default/objects/InstallationRequest__c/fields/SurveyDate__c.field-meta.xml
<CustomField>
    <fullName>SurveyDate__c</fullName>
    <inlineHelpText>Please enter the date agreed with the customer to visit the installation location</inlineHelpText>
    <label>Site Survey Date</label>
    <type>Date</type>
</CustomField>