force-app/main/default/objects/InstallationRequest__c/fields/SurveyNotes__c.field-meta.xml
<CustomField>
    <fullName>SurveyNotes__c</fullName>
    <label>Site Survey Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>