force-app/main/default/objects/InstallationRequest__c/fields/WorksElectrical__c.field-meta.xml
<CustomField>
    <fullName>WorksElectrical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please check this box if the installation requires the modification of the electrical installation</description>
    <inlineHelpText>Please check this box if the installation requires the modification of the electrical installation</inlineHelpText>
    <label>Electrical Works Required?</label>
    <type>Checkbox</type>
</CustomField>