force-app/main/default/objects/InstallationRequest__c/fields/WorksOther__c.field-meta.xml
<CustomField>
    <fullName>WorksOther__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if the installation required additional works other than to install our products</inlineHelpText>
    <label>Other Works Required?</label>
    <type>Checkbox</type>
</CustomField>