force-app/main/default/objects/InstallationRequest__c/fields/WorksWater__c.field-meta.xml
<CustomField>
    <fullName>WorksWater__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check this box if the installation requires the modification of the existing water installation</inlineHelpText>
    <label>Water Works Required?</label>
    <type>Checkbox</type>
</CustomField>