force-app/main/default/objects/InstallationRequest__c/validationRules/VR01_Cost_estimated.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Cost_estimated</fullName>
    <active>true</active>
    <description>Checks there is a cost estimation</description>
    <errorConditionFormula>ispickval(  State__c , &apos;Quote Preparation&apos; )
&amp;&amp; 
( 
isnull(Installation_Cost__c) 
|| Installation_Cost__c &lt;= 0 
|| ispickval( Currency__c , &apos;&apos;) 
)</errorConditionFormula>
    <errorMessage>Please enter the estimation of the cost</errorMessage>
</ValidationRule>