force-app/main/default/objects/InstallationRequest__c/validationRules/VR02_Quote_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_Quote_Sent</fullName>
    <active>true</active>
    <description>Quote sent to customer</description>
    <errorConditionFormula>ispickval( State__c , &apos;Quotation Sent&apos; ) &amp;&amp;
isblank( SAPQuote__c )</errorConditionFormula>
    <errorMessage>Please enter the number of the SAP quotation before selectin this status</errorMessage>
</ValidationRule>