force-app/main/default/objects/InstallationRequest__c/validationRules/VR03_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>VR03_Closed_Won</fullName>
    <active>true</active>
    <errorConditionFormula>ispickval( State__c , &apos;Closed Won&apos; ) &amp;&amp;
(
isblank( SAPOrder__c ) ||
isblank( SAPPurchaseOrder__c )
)</errorConditionFormula>
    <errorMessage>Requests won require both the sales and purchase order numbers</errorMessage>
</ValidationRule>