force-app/main/default/objects/InstallationRequest__c/listViews/Installation_Requests_Closed.listView-meta.xml
<ListView>
    <fullName>Installation_Requests_Closed</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>equals</operation>
        <value>Closed Won,Closed Lost,Rejected</value>
    </filters>
    <label>Installation Requests - Closed</label>
</ListView>