force-app/main/default/objects/InstallationRequest__c/listViews/Installation_Requests_On_Going.listView-meta.xml
<ListView>
    <fullName>Installation_Requests_On_Going</fullName>
    <columns>NAME</columns>
    <columns>State__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>InstallerAccount__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>State__c</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost,Rejected</value>
    </filters>
    <label>Installation Requests - Ongoing</label>
</ListView>