force-app/main/default/objects/InstallationRequest__c/listViews/My_Installation_Requests.listView-meta.xml
<ListView>
    <fullName>My_Installation_Requests</fullName>
    <columns>NAME</columns>
    <columns>WorksElectrical__c</columns>
    <columns>WorksOther__c</columns>
    <columns>State__c</columns>
    <columns>SurveyDate__c</columns>
    <columns>SurveyCompleted__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Installation Requests</label>
</ListView>